force-app/main/default/objects/InferralSolutionMapContact__c/InferralSolutionMapContact__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Inferral Solution Map Contact</label>
</CustomObject>