force-app/main/default/objects/InferralSolutionMapContact__c/fields/Inferred_Solution__c.field-meta.xml
<CustomField>
    <fullName>Inferred_Solution__c</fullName>
    <label>Inferred Solution</label>
    <length>255</length>
    <type>Text</type>
</CustomField>