force-app/main/default/objects/InferralSolutionMapContact__c/fields/Inferred_Solution_From_Web__c.field-meta.xml
<CustomField>
    <fullName>Inferred_Solution_From_Web__c</fullName>
    <label>Inferred Solution From Web</label>
    <length>255</length>
    <type>Text</type>
</CustomField>