force-app/main/default/objects/InferralSolutionMapContact__c/listViews/Inferred_solution.listView-meta.xml
<ListView>
    <fullName>Inferred_solution</fullName>
    <columns>CREATED_DATE</columns>
    <columns>Department__c</columns>
    <columns>SW_Industry__c</columns>
    <columns>Inferred_Solution__c</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>Inferred solution</label>
</ListView>